--- a/docs/software/comms/ethernet.mdx
+++ b/docs/software/comms/ethernet.mdx
@@ -12,7 +12,7 @@ Ethernet is another common communication protocol used between computers. Like C
 Ethernet uses twisted pair cables, typically Cat5e or Cat6, to transmit data between devices. Each device on the network is assigned a unique IP address, allowing for communication between devices on the same network or
 across different networks using routers.
 
-## Eletronics
+## Electronics
 Ethernet uses a differential signaling method similar to CAN, but it uses four pairs of wires instead of two. Ethernet uses a total of four pairs of wires, with two pairs used for transmitting data and two pairs used for
 receiving data. This allows for full duplex communication, meaning that data can be transmitted and received simultaneously. Ethernet cables are typically terminated with RJ45 connectors, which are designed to provide a 
 secure connection between the device and cable. RJ45 connectors have a release tab that allows for easy removal of the connector from the device. 
@@ -27,6 +27,6 @@ tab **will damage the connector** or the device. **Please be gentle with our rob
 
 ## Network Architecture
 Ethernet uses a star topology, meaning that all devices are connected to a central hub or switch. A network switch is a device that connects multiple devices on the same network, allowing them to communicate with each other.
-On FRC Robots, the [Robot Radio](../hardware/radio.mdx) acts as the network switch, allowing the roboRIO and other devices to communicate with each other. Commonly we have the roborio, as well as our visison
+On FRC Robots, the [Robot Radio](../hardware/radio.mdx) acts as the network switch, allowing the roboRIO and other devices to communicate with each other. Commonly we have the roboRIO, as well as our vision
 coprocessor connected to the robot radio via ethernet on the robot.
 
