--- a/docs/software/java/standards.mdx
+++ b/docs/software/java/standards.mdx
@@ -39,7 +39,7 @@ Example is show below:
     boolean is_enabled_;
     float error_;
     ```
-- Variables that are constant should be named using `SCREAMING_SNAKE_CASE`. The should also use the `final`.
+- Variables that are constant should be named using `SCREAMING_SNAKE_CASE`. They should also use the `final` keyword.
     ```java
     static final double ELEVATOR_HOME_POSITION;
     static final int COUNTER_RESET;
