--- a/docs/software/overview.mdx
+++ b/docs/software/overview.mdx
@@ -10,4 +10,4 @@ Welcome to the software documentation for the MARS/WARS robotics team! This docu
 
 ## Getting Started
 If you are looking to start programming for the team, it is important to join our [GitHub Organization](https://github.com/FRC-Team-4143).
-Once you have create a GitHub account, reach out to a mentor to get added to the organization.
+Once you have created a GitHub account, reach out to a mentor to get added to the organization.
