--- a/docs/software/tools/github.mdx
+++ b/docs/software/tools/github.mdx
@@ -41,7 +41,7 @@ merged into the main branch. This is a good way to ensure that the changes are c
 main branch. You can create a pull request from GitHub and have your peers review your changes before merging.
 
 You can create a pull request by going to the GitHub page for the repo and clicking on the `Pull requests` tab. From
-there, you can click on the `New pull request` button and select the branch you want to into your selected target
+there, you can click on the `New pull request` button and select the branch you want to merge into your selected target
 branch. You can then add a title and description for your pull request and submit it for review. The PR will show all
 the changes made in that branch and allow your peers or mentors to review your changes before merging. They can leave
 comments, request changes, or approve the pull request. Once the pull request is approved, you can merge it into the
