--- a/docs/software/training/index.mdx
+++ b/docs/software/training/index.mdx
@@ -21,9 +21,9 @@ import DocCardList from '@theme/DocCardList';
 <DocCardList />
 
 ## 2025 Pre-Season Training Sessions
-Sessions start a 5:00 PM in Mr. Ballard's room and run about 2 hours.
+Sessions start at 5:00 PM in Mr. Ballard's room and run about 2 hours.
 Time before and after can be used for Q&A and the hands-on exercises.
-Each sessions is offered twice a week to accommodate different schedules and two topics are covered each week.
+Each session is offered twice a week to accommodate different schedules and two topics are covered each week.
 
 - Hardware and Software Tools
     - Wednesday, November 5th, 2025
@@ -46,7 +46,7 @@ Each sessions is offered twice a week to accommodate different schedules and two
 
 **🦃 Thanksgiving Break - No Sessions 🦃**
 
-- State Machines and Commands.mdx
+- State Machines and Commands
     - Monday, December 1st, 2025
     - Tuesday, December 2nd, 2025
 - Control Theory
