--- a/docs/software/training/index.mdx
+++ b/docs/software/training/index.mdx
@@ -12,49 +12,25 @@ Welcome to the MARS/WARS Pre-Season Training Materials! This comprehensive curri
 It is **highly recommended** to complete these lessons in order as they walk through the fundamentals step-by-step, building upon previous concepts.
 :::
 
-## Training Sessions
-
-Below you'll find all available training materials organized by recommended order.
-
-import DocCardList from '@theme/DocCardList';
-
-<DocCardList />
-
 ## 2025 Pre-Season Training Sessions
 Sessions start at 5:00 PM in Mr. Ballard's room and run about 2 hours.
 Time before and after can be used for Q&A and the hands-on exercises.
 Each session is offered twice a week to accommodate different schedules and two topics are covered each week.
 
-- Hardware and Software Tools
-    - Wednesday, November 5th, 2025
-    - Thursday, November 6th, 2025
-- Motors and Drivetrains
-    - Monday, November 10th, 2025
-    - Tuesday, November 11th, 2025
-- Sensors and Feedback
-    - Wednesday, November 12th, 2025
-    - Thursday, November 13th, 2025
-- Methods and Conditions
-    - Monday, November 17th, 2025
-    - Tuesday, November 18th, 2025
-- Classes and Objects
-    - Wednesday, November 19th, 2025
-    - Thursday, November 20th, 2025
-- Subsystems and Mechanisms
-    - Monday, November 24th, 2025
-    - Tuesday, November 25th, 2025
-
-**🦃 Thanksgiving Break - No Sessions 🦃**
-
-- State Machines and Commands
-    - Monday, December 1st, 2025
-    - Tuesday, December 2nd, 2025
-- Control Theory
-    - Wednesday, December 3rd, 2025
-    - Thursday, December 4th, 2025
-- Computer Vision
-    - Monday, December 8th, 2025
-    - Tuesday, December 9th, 2025
-- Autonomous
-    - Wednesday, December 10th, 2025
-    - Thursday, December 11th, 2025
+| Date | Topic |
+|------|-------|
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 5th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 6th, 2025 | [Hardware and Software Tools](./hardware-software-tools) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, November 10th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 11th, 2025 | [Motors and Drivetrains](./motors-drivetrains) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 12th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 13th, 2025 | [Sensors and Feedback](./sensors-feedback) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, November 17th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 18th, 2025 | [Methods and Conditions](./methods-conditions) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 19th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 20th, 2025 | [Classes and Objects](./classes-objects) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, November 24th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 25th, 2025 | [Subsystems and Mechanisms](./subsystems-mechanisms) |
+| 🦃 **Thanksgiving Break** | **No Sessions** 🦃 |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, December 1st, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, December 2nd, 2025 | [State Machines and Commands](./state-machines-commands) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, December 3rd, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, December 4th, 2025 | [Control Theory](./control-theory) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, December 8th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, December 9th, 2025 | [Computer Vision](./computer-vision) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, December 10th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, December 11th, 2025 | [Autonomous](./autonomous) |
+| 🎄 **Holiday Break** | **No Sessions** 🎄 |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, January 5th, 2026<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, January 6th, 2026 | MARS/WARS Outreach and Branding |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, January 7th, 2026<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, January 8th, 2026 | MARS/WARS Lessons Learned |
+| <span style={{color: '#9C27B0'}}>**Saturday**</span>, January 9th, 2026 | **KICKOFF!** 🚀 |
