unlists unfinished trainings

--- a/docs/software/training/classes-objects.mdx
+++ b/docs/software/training/classes-objects.mdx
@@ -3,6 +3,7 @@ title: Classes and Objects
 description: This is an intro to object-oriented programming in Java. It covers how to create classes, instantiate objects, and use them in your code.
 hide_table_of_contents: true
 sidebar_position: 5
+unlisted: true
 ---
 
 # WIP
