--- a/docs/software/training/computer-vision.mdx
+++ b/docs/software/training/computer-vision.mdx
@@ -3,6 +3,7 @@ title: Computer Vision
 description: An overview of computer vision techniques used in FRC robots. This includes image processing, object detection, and how to implement vision systems on our robots.
 hide_table_of_contents: true
 sidebar_position: 9
+unlisted: true
 ---
 
 # WIP
