--- a/docs/software/training/control-theory.mdx
+++ b/docs/software/training/control-theory.mdx
@@ -3,6 +3,7 @@ title: Control Theory
 description: An overview of control theory principles applied to FRC robots. This includes concepts such as feedback loops, PID control, and system dynamics.
 hide_table_of_contents: true
 sidebar_position: 8
+unlisted: true
 ---
 
 # WIP
