--- a/docs/software/training/index.mdx
+++ b/docs/software/training/index.mdx
@@ -19,17 +19,17 @@ Each session is offered twice a week to accommodate different schedules and two 
 
 | Date | Topic |
 |------|-------|
-| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 5th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 6th, 2025 | [Hardware and Software Tools](./hardware-software-tools) |
-| <span style={{color: '#2196F3'}}>**Monday**</span>, November 10th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 11th, 2025 | [Motors and Drivetrains](./motors-drivetrains) |
-| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 12th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 13th, 2025 | [Sensors and Feedback](./sensors-feedback) |
-| <span style={{color: '#2196F3'}}>**Monday**</span>, November 17th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 18th, 2025 | [Methods and Conditions](./methods-conditions) |
-| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 19th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 20th, 2025 | [Classes and Objects](./classes-objects) |
-| <span style={{color: '#2196F3'}}>**Monday**</span>, November 24th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 25th, 2025 | [Subsystems and Mechanisms](./subsystems-mechanisms) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 5th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 6th, 2025 | [Hardware and Software Tools](./training/hardware-software-tools) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, November 10th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 11th, 2025 | [Motors and Drivetrains](./training/motors-drivetrains) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 12th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 13th, 2025 | [Sensors and Feedback](./training/sensors-feedback) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, November 17th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 18th, 2025 | [Methods and Conditions](./training/methods-conditions) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 19th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 20th, 2025 | [Classes and Objects](./training/classes-objects) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, November 24th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 25th, 2025 | [Subsystems and Mechanisms](./training/subsystems-mechanisms) |
 | 🦃 **Thanksgiving Break** | **No Sessions** 🦃 |
-| <span style={{color: '#2196F3'}}>**Monday**</span>, December 1st, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, December 2nd, 2025 | [State Machines and Commands](./state-machines-commands) |
-| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, December 3rd, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, December 4th, 2025 | [Control Theory](./control-theory) |
-| <span style={{color: '#2196F3'}}>**Monday**</span>, December 8th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, December 9th, 2025 | [Computer Vision](./computer-vision) |
-| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, December 10th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, December 11th, 2025 | [Autonomous](./autonomous) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, December 1st, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, December 2nd, 2025 | [State Machines and Commands](./training/state-machines-commands) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, December 3rd, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, December 4th, 2025 | [Control Theory](./training/control-theory) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, December 8th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, December 9th, 2025 | [Computer Vision](./training/computer-vision) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, December 10th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, December 11th, 2025 | [Autonomous](./training/autonomous) |
 | 🎄 **Holiday Break** | **No Sessions** 🎄 |
 | <span style={{color: '#2196F3'}}>**Monday**</span>, January 5th, 2026<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, January 6th, 2026 | MARS/WARS Outreach and Branding |
 | <span style={{color: '#4CAF50'}}>**Wednesday**</span>, January 7th, 2026<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, January 8th, 2026 | MARS/WARS Lessons Learned |
