--- a/docs/software/training/methods-conditions.mdx
+++ b/docs/software/training/methods-conditions.mdx
@@ -3,6 +3,7 @@ title: Methods and Conditions
 description: This is a into to methods and conditions in the Java programming language. It covers how to create methods, how to call them, and how to use conditions within them.
 hide_table_of_contents: true
 sidebar_position: 4
+unlisted: true
 ---
 
 # WIP
