--- a/docs/software/training/sensors-feedback.mdx
+++ b/docs/software/training/sensors-feedback.mdx
@@ -3,6 +3,7 @@ title: Sensors and Feedback
 description: An overview of sensors and feedback mechanisms used in FRC robots. This includes different types of sensors, their applications, and how to integrate them into your robot's control system.
 hide_table_of_contents: true
 sidebar_position: 3
+unlisted: true
 ---
 
 # WIP
