--- a/docs/software/training/motors-drivetrains.mdx
+++ b/docs/software/training/motors-drivetrains.mdx
@@ -3,6 +3,7 @@ title: Motors and Drivetrains
 description: An overview of motors and drivetrains used in FRC robots. This includes different types of motors, configurations, and drivetrain layouts.
 hide_table_of_contents: true
 sidebar_position: 2
+unlisted: true
 ---
 
 # WIP
