--- a/docs/software/tools/hw-config.mdx
+++ b/docs/software/tools/hw-config.mdx
@@ -27,8 +27,8 @@ different tabs to see the unique setup instructions for each.
     <TabItem value="general" label="General 🧰" default>
     ## Generic FRC Hardware
         Hardware that we typically use that is generic across all robots includes:
-        - [roboRIO - NI](https://docs.wpilib.org/en/stable/docs/software/roborio-info/roborio-introduction.html)
-        - [VH109 FRC Radio - Vivid Hosting](https://frc-radio.vivid-hosting.net/)
+        - [roboRIO - NI](../hardware/roborio.mdx)
+        - [VH109 FRC Radio - Vivid Hosting](../hardware/radio.mdx)
 
         These devices have their own unique configuration method, but are required on all FRC robots. You can't run
         your code without a RIO and you can't connect to the field without a radio.
