--- a/docs/software/hardware/radio.mdx
+++ b/docs/software/hardware/radio.mdx
@@ -10,7 +10,7 @@ import radio from '@site/static/img/software/hardware/radio/radio.avif';
 # VH109 Robot Radio
 The VH109 Robot Radio is a device used in FRC robots to provide wireless communication between the robot and the driver station. For our robots,
 the VH109 radio on the robot will be connected to our Field Management System (FMS) while on the field. This allows us to connect multiple 
-development computers to the robot wirelessly while developing software at home. 
+development computers to the robot wirelessly while developing software at home. Check out the Vivid Hosting documentation for a more detailed [overview](https://frc-radio.vivid-hosting.net/).
 
 <img src={radio} width="400" style={{backgroundColor: 'white', padding: '10px', borderRadius: '8px', display: 'block', marginTop: '10px'}}/>
 
