initial talon fx?

--- a/docs/software/hardware/motor_controllers/fx.mdx
+++ b/docs/software/hardware/motor_controllers/fx.mdx
@@ -4,3 +4,12 @@ description: CTRE brushless motor controller
 hide_table_of_contents: true
 sidebar_position: 1
 ---
+
+import talon_fx from '@site/static/img/software/hardware/motor_controllers/talon_fx_kraken.png';
+
+The CTRE Talon FX is a high-performance brushless motor controller commonly used in our robots. It offers percent output,
+velocity, position, and torque control modes. The Talon FX also includes advanced features such as integrated PID control,
+and customizable CAN bus communication.
+
+<img src={talon_fx} width="400"/>
+
