--- a/docs/software/hardware/motor_controllers/fx.mdx
+++ b/docs/software/hardware/motor_controllers/fx.mdx
@@ -13,3 +13,5 @@ and customizable CAN bus communication.
 
 <img src={talon_fx} width="400"/>
 
+Here is a link to the CTRE API documentation for the Talon FX: [Talon FX API](https://v6.docs.ctr-electronics.com/en/latest/docs/hardware-reference/talonfx/index.html)
+
