--- a/docs/software/hardware/motor_controllers/fx.mdx
+++ b/docs/software/hardware/motor_controllers/fx.mdx
@@ -6,12 +6,16 @@ sidebar_position: 1
 ---
 
 import talon_fx from '@site/static/img/software/hardware/motor_controllers/talon_fx_kraken.png';
+import talon_fx_rear from '@site/static/img/software/hardware/motor_controllers/talon_fx_kraken_rear.jpg';
 
 The CTRE Talon FX is a high-performance brushless motor controller commonly used in our robots. It offers percent output,
 velocity, position, and torque control modes. The Talon FX also includes advanced features such as integrated PID control,
 and customizable CAN bus communication.
 
-<img src={talon_fx} width="400"/>
+<div style={{display: 'flex', gap: '20px', justifyContent: 'center', flexWrap: 'wrap', alignItems: 'center', backgroundColor: 'white', padding: '20px'}}>
+  <img src={talon_fx} style={{maxWidth: '400px', width: '100%', height: 'auto', objectFit: 'contain'}}/>
+  <img src={talon_fx_rear} style={{maxWidth: '400px', width: '100%', height: 'auto', objectFit: 'contain'}}/>
+</div>
 
 Here is a link to the CTRE API documentation for the Talon FX: [Talon FX API](https://v6.docs.ctr-electronics.com/en/latest/docs/hardware-reference/talonfx/index.html)
 
