Add vision info

--- a/docs/software/hardware/jetsons.mdx
+++ b/docs/software/hardware/jetsons.mdx
@@ -12,7 +12,7 @@ processing images from the cameras mounted on the robot and providing data to th
 The Jetson runs an Ubuntu Linux-based operating system and runs our AprilTag detection software during matches. 
 It also often runs other vision processing tasks such as game piece detection.
 
-See [Object Detection](../vision/obj_det.mdx) and [AprilTag Fiducials](../vision/fiducials.mdx) for more information 
+See [Object Detection](../vision/obj_det.mdx) and [AprilTag Fiducials](../vision/april_tags.mdx) for more information
 on the vision processing tasks themselves.
 
 It can be accessed over SSH when connected to the robot's network.
