--- a/docs/software/lessons.mdx
+++ b/docs/software/lessons.mdx
@@ -45,4 +45,14 @@ mistakes or tips we have learned.
     - Having an elite auto takes lots of tuning down to the quarter second. We need to ensure we put priority on auto
     tuning time over quality-of-life robot features.
 
+## Hardware
+- ***Design for one control system provider and stick with it.***[^2]
+    - Mixing motor controller brands can lead to unexpected behavior and complicate development. Pick one brand
+    (ex. CTRE or REV) and use it for all motor controllers on the robot.
+    - We tend to prefer using CTRE motor controllers due to their robustness and feature set.
+- ***Introducing new hardware should be done early in the season.***[^1]
+    - Any new hardware can lead to unexpected issues and complications. Introducing it early in the season allows for
+    more time to troubleshoot and resolve any issues that may arise.
+
 [^1]: Learned in ***2025 REEFSCAPE***
+[^2]: Learned in ***2024 CRESCENDO***
