Add initial pass at motors and drivetrains

--- a/docs/software/training/motors-drivetrains.mdx
+++ b/docs/software/training/motors-drivetrains.mdx
@@ -3,7 +3,32 @@ title: Motors and Drivetrains
 description: An overview of motors and drivetrains used in FRC robots. This includes different types of motors, configurations, and drivetrain layouts.
 hide_table_of_contents: true
 sidebar_position: 2
-unlisted: true
 ---
 
-# WIP
+In this training module, we will explore the various motors and drivetrains commonly used in FRC robots. 
+We will also cover how to control these motors through programming in Java using WPILib.
+
+---
+
+## Presentation
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ4JsodGXi5vMbb6lfVjcVqMvsaZPDJ6itzNhuwDt-3PbKw15V9ekfAJrAJf2rC6iMv-P38GvUaliOC/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+---
+
+## Exercises
+- Spin a brushed motor using a motor controller and a joystick from your own code.
+- Set up a leader and a follower motor controller configuration in code.
+- Move motors on both sides of a tank drive drivetrain to drive forward, backward, and turn.
+    - For an extra challenge, try to implement arcade drive controls!
+
+---
+
+## Related Documentation
+### Hardware
+- [Motor Controllers](../hardware/motor_controllers/index.mdx): Overview of the motor controllers we use on our robots.
+### Hardware Interfacing
+- [Hardware Configurators](../tools/hw-config.mdx): Guide on how to configure hardware components in the FRC ecosystem.
+### Software Tools
+- [VSCode](../tools/vscode.mdx): Our primary Integrated Development Environment (IDE) for programming.
+- [Driver Station](../tools/driver-station.mdx): Software used to control and monitor the robot during competitions.
