--- a/docs/software/training/sensors-feedback.mdx
+++ b/docs/software/training/sensors-feedback.mdx
@@ -3,7 +3,35 @@ title: Sensors and Feedback
 description: An overview of sensors and feedback mechanisms used in FRC robots. This includes different types of sensors, their applications, and how to integrate them into your robot's control system.
 hide_table_of_contents: true
 sidebar_position: 3
-unlisted: true
 ---
 
-# WIP
+In this training module, we will explore the various sensors commonly used in FRC robots. 
+We will also cover how to read data from these sensors and use that data to provide feedback for
+robot control in our software.
+
+---
+
+## Presentation
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQsIovZpL8I7xNz8YnAdjEyarPo85lOpOJxlzNr5bqzq1UM_0ZlvwX2JXiathIVaDcPd7EK0Y0fmey4/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+---
+
+## Exercises
+
+- Show chassis speeds on SmartDashboard
+    - Linear speed in m/s (forward / backward)
+    - Angular speed in rad/s (rotation)
+- Show distance traveled by driving on SmartDashboard
+    - Use encoders to measure distance
+- Implement a simple Bang Bang controller to drive a set distance
+    - Use encoders to measure distance
+    - Use a constant speed until the robot reaches the target distance
+
+---
+
+## Related Documentation
+### Software
+- [Control Types](../software/control_types.mdx): Overview of different control types used in robotics.
+- [VSCode](../tools/vscode.mdx): Our primary Integrated Development Environment (IDE) for programming.
+- [Elastic](../software/elastic.mdx): Guide on using the Elastic dashboard for monitoring robot data.
