--- a/docs/software/training/sensors-feedback.mdx
+++ b/docs/software/training/sensors-feedback.mdx
@@ -32,6 +32,6 @@ robot control in our software.
 
 ## Related Documentation
 ### Software
-- [Control Types](../software/control_types.mdx): Overview of different control types used in robotics.
+- [Control Types](../controls/system-control/control-types.mdx): Overview of different control types used in robotics.
 - [VSCode](../tools/vscode.mdx): Our primary Integrated Development Environment (IDE) for programming.
-- [Elastic](../software/elastic.mdx): Guide on using the Elastic dashboard for monitoring robot data.
+- [Elastic](../tools/elastic.mdx): Guide on using the Elastic dashboard for monitoring robot data.
