updates lesson plans for methods and wpilib

--- a/docs/software/training/motors-drivetrains.mdx
+++ b/docs/software/training/motors-drivetrains.mdx
@@ -17,7 +17,9 @@ We will also cover how to control these motors through programming in Java using
 ---
 
 ## Exercises
+### Motors
 - Spin a brushed motor using a motor controller and a joystick from your own code.
+### Drivetrains
 - Set up a leader and a follower motor controller configuration in code.
 - Move motors on both sides of a tank drive drivetrain to drive forward, backward, and turn.
     - For an extra challenge, try to implement arcade drive controls!
