--- a/docs/software/training/sensors-feedback.mdx
+++ b/docs/software/training/sensors-feedback.mdx
@@ -18,12 +18,13 @@ robot control in our software.
 ---
 
 ## Exercises
-
+### Sensors
 - Show chassis speeds on SmartDashboard
     - Linear speed in m/s (forward / backward)
     - Angular speed in rad/s (rotation)
 - Show distance traveled by driving on SmartDashboard
     - Use encoders to measure distance
+### Feedback
 - Implement a simple Bang Bang controller to drive a set distance
     - Use encoders to measure distance
     - Use a constant speed until the robot reaches the target distance
@@ -32,6 +33,7 @@ robot control in our software.
 
 ## Related Documentation
 ### Software
+- [Conditions](../java/conditions.mdx): Explanation of conditional statements in programming.
 - [Control Types](../controls/system-control/control-types.mdx): Overview of different control types used in robotics.
 - [VSCode](../tools/vscode.mdx): Our primary Integrated Development Environment (IDE) for programming.
 - [Elastic](../tools/elastic.mdx): Guide on using the Elastic dashboard for monitoring robot data.
