--- a/docs/software/hardware/motor_controllers/fx.mdx
+++ b/docs/software/hardware/motor_controllers/fx.mdx
@@ -1,5 +1,5 @@
 ---
-title: Talon FX Motor Controller
+title: Talon FX
 description: CTRE brushless motor controller
 hide_table_of_contents: true
 sidebar_position: 1
