--- a/docs/software/hardware/motor_controllers/spark.mdx
+++ b/docs/software/hardware/motor_controllers/spark.mdx
@@ -1,5 +1,5 @@
 ---
-title: Spark MAX Motor Controller
+title: Spark MAX
 description: Rev Spark MAX brushed / brushless motor controller
 hide_table_of_contents: true
 sidebar_position: 3
