--- a/docs/software/training/methods-wpilib.mdx
+++ b/docs/software/training/methods-wpilib.mdx
@@ -49,7 +49,7 @@ In this module, we will cover the concept of methods in programming and explore 
 - [WPILib](../robot_dev/wpilib.mdx): The main library used for programming FRC robots.
 - [Kinematics and the ChassisSpeeds Class](https://docs.wpilib.org/en/stable/docs/software/kinematics-and-odometry/intro-and-chassis-speeds.html): Overview of kinematics and how to use the ChassisSpeeds class in WPILib.
 ### Hardware
-- [IMU](../hardware/imu): Guide on using Inertial Measurement Units (IMUs) for robot orientation and movement tracking.
+- [IMU](../hardware/sensors/imu): Guide on using Inertial Measurement Units (IMUs) for robot orientation and movement tracking.
 ### Software Tools
 - [VSCode](../tools/vscode.mdx): Our primary Integrated Development Environment (IDE) for programming.
 - [Driver Station](../tools/driver-station.mdx): Software used to control and monitor the robot during competitions.
