--- a/docs/software/hardware/motor_controllers/nova.mdx
+++ b/docs/software/hardware/motor_controllers/nova.mdx
@@ -1,5 +1,5 @@
 ---
-title: Thrifty Nova Motor Controller
+title: Thrifty Nova
 description: The ThriftyBot brushed / brushless motor controller
 hide_table_of_contents: true
 sidebar_position: 2
