--- a/docs/software/hardware/sensors/tof.mdx
+++ b/docs/software/hardware/sensors/tof.mdx
@@ -2,5 +2,6 @@
 title: Time of Flight (ToF)
 description: Sensors that measure distance using light
 hide_table_of_contents: true
-sidebar_position: 10
+sidebar_position: 3
+unlisted: true
 ---
