Updates to Mechanical.

--- a/docs/design/design_guide/naming.mdx
+++ b/docs/design/design_guide/naming.mdx
@@ -2,6 +2,7 @@
 title: Naming Conventions
 hide_table_of_contents: true
 sidebar_position: 1
+unlisted: true
 ---
 
 Giving parts decriptive names help your fellow designers to quickly and efficiently find parts and avoid repeat efforts.
