--- a/docs/design/mechanical/cam/start.mdx
+++ b/docs/design/mechanical/cam/start.mdx
@@ -2,6 +2,8 @@
 title: Starting
 hide_table_of_contents: true
 sidebar_position: 1
+unlisted: true
+
 ---
 
 The following text will walk you through how to set up and generate G-Code from Fusion.
