--- a/docs/design/mechanical/machining/milling_manual.mdx
+++ b/docs/design/mechanical/machining/milling_manual.mdx
@@ -2,6 +2,7 @@
 title: Milling
 hide_table_of_contents: true
 sidebar_position: 2
+unlisted: true
 ---
 
 Milling a subtractive machining process that uses rotating cutters to remove material from a workpiece or stock. 
