--- a/docs/design/design_guide/naming.mdx
+++ b/docs/design/design_guide/naming.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 unlisted: true
 ---
 
-Giving parts decriptive names help your fellow designers to quickly and efficiently find parts and avoid repeat efforts.
+Giving parts descriptive names help your fellow designers to quickly and efficiently find parts and avoid repeat efforts.
 
 ### Onshape Parts
 
