--- a/docs/design/mechanical/cam/start.mdx
+++ b/docs/design/mechanical/cam/start.mdx
@@ -1,5 +1,5 @@
 ---
-title: Starting
+title: Getting Started with Fusion
 hide_table_of_contents: true
 sidebar_position: 1
 unlisted: true
@@ -13,12 +13,11 @@ If you do not have access to Fusion or the shared work space refer to [**Fusion 
 
 1. Part Download
 
-import onshape_export from '@site/static/img/mechanical/Fusion/Onshape_Export.png';
 
 <img src={onshape_export} width="1000"/>
 
-import onshape_download from '@site/static/img/mechanical/Fusion/Onshape_Download.png';
 
-|ID|Tool|
-|---|---|
-|hi|<img src={onshape_download} width="400"/>
+<img src={onshape_download} width="400"/>
+
+import onshape_download from '@site/static/img/mechanical/Fusion/Onshape_Download.png';
+import onshape_export from '@site/static/img/mechanical/Fusion/Onshape_Export.png';
